--- a/aya-sahraoui.html
+++ b/aya-sahraoui.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAHRAOUI Aya - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="aya-sahraoui.css">
 </head>
 <body>
     <div class="scroll-progress"></div>
@@ -176,7 +176,7 @@
         <p>&copy; 2025 Souhaib Djenane. Crafted with passion and creativity.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="aya-sahraoui.js"></script>
 
 </body>
 </html>
