feat: Add navigation link to aya github account

--- a/aya-sahraoui.html
+++ b/aya-sahraoui.html
@@ -165,7 +165,7 @@
             </div>
 
             <div class="social-links">
-                <a href="#" class="social-link" title="GitHub">
+                <a href="https://github.com/SAHRAOUIaya" class="social-link" title="GitHub">
                     <div><img src="assets/github-icon.svg" alt="github Logo"></div>
                 </a>
             </div>
