--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     </div>
                     <div class="flex-1">
                         <h3 class="text-xl font-semibold text-white mb-3">SAHRAOUI Aya</h3>
-                        <a href="" target="_blank" rel="noopener noreferrer" class="portfolio-link">
+                        <a href="aya-sahraoui.html" target="_blank" rel="noopener noreferrer" class="portfolio-link">
                             View Portfolio
                         </a>
                     </div>
