--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </div>
                     <div class="flex-1">
                         <h3 class="text-xl font-semibold text-white mb-3">GASMI Sondes</h3>
-                        <a href="" target="_blank" rel="noopener noreferrer" class="portfolio-link">
+                        <a href="sondes.html" target="_blank" rel="noopener noreferrer" class="portfolio-link">
                             View Portfolio
                         </a>
                     </div>
