refactor: Add firstname and lastname to the footer of Aya profile

--- a/aya-sahraoui.html
+++ b/aya-sahraoui.html
@@ -172,7 +172,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Souhaib Djenane. Crafted with passion and creativity.</p>
+        <p>&copy; 2025 SAHRAOUI Aya. Crafted with passion and creativity.</p>
     </footer>
 
     <script src="aya-sahraoui.js"></script>
