--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </div>
                     <div class="flex-1">
                         <h3 class="text-xl font-semibold text-white mb-3">BOUREGAA Kawther Ikhlas</h3>
-                        <a href="" target="_blank" rel="noopener noreferrer" class="portfolio-link">
+                        <a href="kawther.html" target="_blank" rel="noopener noreferrer" class="portfolio-link">
                             View Portfolio
                         </a>
                     </div>
