--- a/kawther.html
+++ b/kawther.html
@@ -868,7 +868,7 @@
             </div>
 
             <div class="skill-card">
-                <div class="skill-icon"> <img src="assets/python-5.svg" alt="Python Logo"></div>
+                <div class="skill-icon"> <img src="assets/k_python-5.svg" alt="Python Logo"></div>
                 <div class="skill-header">
                     <h3>Python</h3>
                     <span class="skill-level">intermediate</span>
@@ -886,7 +886,7 @@
             </div>
 
             <div class="skill-card">
-                <div class="skill-icon"><img src="assets/flutter.svg" alt="Flutter Logo"></div>
+                <div class="skill-icon"><img src="assets/k_flutter.svg" alt="Flutter Logo"></div>
                 <div class="skill-header">
                     <h3>Flutter</h3>
                     <span class="skill-level">intermediate</span>
@@ -904,7 +904,7 @@
             </div>
 
             <div class="skill-card">
-                <div class="skill-icon"><img src="assets/figma.svg" alt="UI/UX Design Logo"></div>
+                <div class="skill-icon"><img src="assets/k_figma.svg" alt="UI/UX Design Logo"></div>
                 <div class="skill-header">
                     <h3>Design</h3>
                     <span class="skill-level">intermediate</span>
@@ -923,7 +923,7 @@
 
 
             <div class="skill-card">
-                <div class="skill-icon"><img src="assets/ai-logo.svg" alt="Ai Logo"></div>
+                <div class="skill-icon"><img src="assets/k_ai-logo.svg" alt="Ai Logo"></div>
                 <div class="skill-header">
                     <h3>AI & Machine Learning</h3>
                     <span class="skill-level">intermediate</span>
@@ -954,13 +954,13 @@
         <div class="contact-container">
             <div class="contact-grid">
                 <div class="contact-card">
-                    <div class="contact-icon"><img src="assets/gmail.svg" alt="gmail Logo"></div>
+                    <div class="contact-icon"><img src="assets/k_gmail.svg" alt="gmail Logo"></div>
                     <h3>Email</h3>
                     <a href="mailto:kawther.ikhlas.bouregaa@ensia.edu.dz">kawther.ikhlas.bouregaa@ensia.edu.dz</a>
                 </div>
 
                 <div class="contact-card">
-                    <div class="contact-icon"><img src="assets/phone-icon.svg" alt="phone Logo"></div>
+                    <div class="contact-icon"><img src="assets/k_phone-icon.svg" alt="phone Logo"></div>
                     <h3>Phone</h3>
                     <a href="tel:0549763873">0549 59 67 40</a>
                 </div>
@@ -968,7 +968,7 @@
 
             <div class="social-links">
                 <a href="https://github.com/Kawther-Br" class="social-link" title="GitHub">
-                    <div><img src="assets/github-icon.svg" alt="github Logo"></div>
+                    <div><img src="assets/k_github-icon.svg" alt="github Logo"></div>
                 </a>
             </div>
         </div>
