--- a/souhaib-djenane.html
+++ b/souhaib-djenane.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Souhaib Djenane - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="souhaib-djenane.css">
 </head>
 <body>
     <div class="scroll-progress"></div>
