fix: Correct html to js linking

--- a/souhaib-djenane.html
+++ b/souhaib-djenane.html
@@ -204,7 +204,7 @@
         <p>&copy; 2025 Souhaib Djenane. Crafted with passion and creativity.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="souhaib-djenane.js"></script>
 
 </body>
 </html>
