--- a/abdellah.html
+++ b/abdellah.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cherfia Abdellah - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="abdellah.css">
 </head>
 <body>
     <div class="scroll-progress"></div>
@@ -227,9 +227,10 @@
         
     </footer>
 
-    <script src="script.js"></script>
+    <script src="abdellah.js"></script>
 
 </body>
 
 </html>
+
 
