--- a/abdellah-cherfia-final.html
+++ b/abdellah-cherfia-final.html
@@ -227,7 +227,7 @@
         
     </footer>
 
-    <script src="abdellah.js"></script>
+    <script src="abdellahcherfia.js"></script>
 
 </body>
 </html>
