--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     </div>
                     <div class="flex-1">
                         <h3 class="text-xl font-semibold text-white mb-3">DJENANE Souhaib</h3>
-                        <a href="souhaib-djenane.html" target="_blank" rel="noopener noreferrer" class="portfolio-link">
+                        <a href="souhaib-djenane-develop.html" target="_blank" rel="noopener noreferrer" class="portfolio-link">
                             View Portfolio
                         </a>
                     </div>
@@ -181,7 +181,7 @@
                     </div>
                     <div class="flex-1">
                         <h3 class="text-xl font-semibold text-white mb-3">CHERFIA Abdellah</h3>
-                        <a href="" target="_blank" rel="noopener noreferrer" class="portfolio-link">
+                        <a href="abdellah-cherfia-final.html" target="_blank" rel="noopener noreferrer" class="portfolio-link">
                             View Portfolio
                         </a>
                     </div>
